# ROS_Flight_Simulator

catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
catkin_ws/devel/include/pamplemousse_actuators/: wingActuatorCommands.h  wingActuatorStates.h
catkin_ws/devel/include/pamplemousse_sensors/: systemStatus.h
catkin_ws/devel/lib/pamplemousse_actuators/: wing_control_node
catkin_ws/devel/lib/pamplemousse_sensors/: listener  spatial_node
catkin_ws/devel/lib/pkgconfig/: pamplemousse_actuators.pc  pamplemousse_sensors.pc  spatial_ros.pc
catkin_ws/devel/share/pamplemousse_actuators/cmake/: pamplemousse_actuators-msg-paths.cmake  pamplemousse_actuatorsConfig.cmake
catkin_ws/devel/share/pamplemousse_sensors/cmake/: pamplemousse_sensors-msg-paths.cmake  pamplemousse_sensorsConfig.cmake
catkin_ws/devel/share/roseus/ros/pamplemousse_actuators/: manifest.l
catkin_ws/devel/share/roseus/ros/pamplemousse_sensors/: manifest.l
catkin_ws/devel/share/spatial_ros/cmake/: spatial_rosConfig.cmake
catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/install/include/pamplemousse_sensors/: SpatialState.h  filterStatus.h
catkin_ws/install/lib/pkgconfig/: pamplemousse_actuators.pc
catkin_ws/install/share/pamplemousse_actuators/msg/: wingActuatorCommands.msg  wingActuatorStates.msg
catkin_ws/install/share/pamplemousse_sensors/: package.xml
catkin_ws/install/share/pamplemousse_sensors/cmake/: pamplemousse_sensors-msg-extras.cmake  pamplemousse_sensors-msg-paths.cmake  pamplemousse_sensorsConfig.cmake
catkin_ws/install/share/pamplemousse_sensors/msg/: systemStatus.msg
catkin_ws/install/share/spatial_ros/: package.xml
catkin_ws/src/ros-pamplemousse-packages-master/: .gitignore  README.md
catkin_ws/src/ros-pamplemousse-packages-master/.github/workflows/: catkin_make.yml
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_actuators/: CMakeLists.txt
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_actuators/msg/: wingActuatorCanFrame.msg
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_actuators/src/: wingControl.cpp  wingControl.h  wingJog.cpp
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_hmi/src/: throttle.cpp  throttle.h
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_sensors/: CMakeLists.txt
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_sensors/msg/: SpatialState.msg  filterStatus.msg
catkin_ws/src/ros-pamplemousse-packages-master/pamplemousse_sensors/src/: listener.cpp  spatial_node.cpp
catkin_ws/src/ros-pamplemousse-packages-master/spatial_ros/: CMakeLists.txt
catkin_ws/src/ros-pamplemousse-packages-master/spatial_ros/src/: an_packet_protocol.c  rs232.c  spatial_packets.c
(+33 files in other folders)
